[project]
name = "image-inpainting"
version = "0.1.0"
description = "Using vision transformers to solve image inpainting problems."
authors = [
    {name = "ventus",email = "ventuss550@gmail.com"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "transformers (>=4.48.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "patchify (>=0.2.3,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "accelerate (>=1.3.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
